src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ALC_Number__c</fullName>
        <inlineHelpText>Agency Location Code</inlineHelpText>
        <label>ALC Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActiveAccount__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>To mark an account as inactive, please email salesforce@nist.gov with the account name and URL and the O&amp;M team will deactivate the account in question.</inlineHelpText>
        <label>Active Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Ownership__c</fullName>
        <label>Business Ownership</label>
        <picklist>
            <picklistValues>
                <fullName>Publically Traded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Woman Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veteran Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disabled Veteran Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Disadvantaged Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minority Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Start-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8(a)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HubZone</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Business_Size__c</fullName>
        <label>Business Size</label>
        <picklist>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Collaborator_Of__c</fullName>
        <label>Collaborator Of</label>
        <picklist>
            <picklistValues>
                <fullName>AMNPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTL - NASCTN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTL - PSCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTL - RFTD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTL - WND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITL - CSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITL - NCCOE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITL - NICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITL - NSTIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DUNS_Number__c</fullName>
        <label>DUNS Number</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MS_Dynamics_ID__c</fullName>
        <externalId>true</externalId>
        <label>Account External Identifier</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Naics_Code__c</fullName>
        <label>Primary NAICS Code</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Academia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standards Agencies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NonProfit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Sec__c</fullName>
        <description>Third tier for the government account record.</description>
        <label>Sub Sector Type</label>
        <picklist>
            <controllingField>Sub_Sector__c</controllingField>
            <picklistValues>
                <fullName>Optical communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quantum communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless (RF)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biomaterials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bioprocessing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell biology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering/synthetic biology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Genomic measurements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glycomics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lipidomics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microbial measurements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proteomics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building codes &amp; standards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building control systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building damage &amp; repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building economics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air conditioning and Heating equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indoor air quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structural engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytical chemistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical engineering &amp; processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical thermodynamics &amp; chemical properties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Molecular characterization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theoretical chemistry &amp; modeling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermochemical properties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community resilience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaster &amp; failure studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaster preparedness, response, recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaster resilience</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Sector__c</fullName>
        <label>Sub Sector</label>
        <picklist>
            <controllingField>Sector__c</controllingField>
            <picklistValues>
                <fullName>Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bioscience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buildings and Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disaster Resilience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forensics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Materials </fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mathematics and Statistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metrology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nanotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutron Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance Excellence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defense Industrial Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear Reactors, Materials and Waste</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TAS_Number__c</fullName>
        <inlineHelpText>A Treasury Account Symbol (TAS)</inlineHelpText>
        <label>TAS Number</label>
        <length>27</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_Founded__c</fullName>
        <description>Business Year Founded</description>
        <inlineHelpText>Business Year Founded - YYYY</inlineHelpText>
        <label>Year Founded</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scanbizcards__ScanBizCards__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ScanBizCards</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ActiveAccount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ActiveAccount__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Government</fullName>
        <active>true</active>
        <description>For Government Accounts.</description>
        <label>Government</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Government</fullName>
        <active>true</active>
        <description>For non-government accounts</description>
        <label>Non-Government</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Account_Not_Record_Owner_Uncheck</fullName>
        <active>false</active>
        <description>Only record owner can Inactivate the Account.</description>
        <errorConditionFormula>AND(ActiveAccount__c = FALSE,$Profile.Name &lt;&gt;&quot;System Administrator&quot;)</errorConditionFormula>
        <errorDisplayField>ActiveAccount__c</errorDisplayField>
        <errorMessage>Only record owner can Inactivate the Account.</errorMessage>
    </validationRules>
</CustomObject>